--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,14 @@
   "author": "Alex Ballen",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "pg": "^8.9.0",
+    "sequelize": "^6.28.0",
     "stripe": "^11.8.0"
   },
   "devDependencies": {
